<resources>
    <string name="app_name">ScorpionGym</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_login">LOGIN</string>
    <string name="menu_home">Ejercicios</string>
    <string name="menu_gallery">Dieta</string>
    <string name="menu_slideshow">Creadores</string>
    <string name="title_activity_maps">Map</string>
</resources>