<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:visible="true">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/iconoejercicio"
            android:title="@string/menu_home"
            android:visible="true" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/dieta"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_calculadora"
            android:icon="@drawable/bmiclac"
            android:title="BMI CALCULADORA" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/creadores"
            android:title="@string/menu_slideshow" />


    </group>
</menu>